--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 <meta property="og:type" content="website">
 
 <link rel="stylesheet" href="/css/main.css">
+<%= csrf_meta_tag %>
 </head>
 
 <body>
