--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -36,6 +36,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
 <%= stylesheet_link_tag('application', media: 'all') %>
+<%= csrf_meta_tags %>
 <script>
 window.LANG = '<%= I18n.locale %>'
 </script>
